compiler-generator/targets/hexagon/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEG
    WHILE
    XOR

Grammar

Rule 0     S' -> stmts
Rule 1     stmts -> stmt
Rule 2     stmts -> stmt SEMICOLON
Rule 3     stmts -> stmts stmt
Rule 4     stmts -> stmts stmt SEMICOLON
Rule 5     stmt -> BREAK
Rule 6     stmt -> expr
Rule 7     stmt -> TYPE ID UPDATE expr
Rule 8     expr -> expr UPDATE expr
Rule 9     stmt -> expr COMMA expr UPDATE expr
Rule 10    expr -> expr PLUS_EQUAL expr
Rule 11    expr -> expr MINUS_EQUAL expr
Rule 12    expr -> expr OR_EQUAL expr
Rule 13    expr -> expr XOR_EQUAL expr
Rule 14    expr -> expr AND_EQUAL expr
Rule 15    expr_empty -> expr
Rule 16    expr_empty -> <empty>
Rule 17    stmt -> IF LPAREN expr RPAREN LBRACKET stmts RBRACKET
Rule 18    stmt -> IF LPAREN expr RPAREN LBRACKET stmts RBRACKET ELSE LBRACKET stmts RBRACKET
Rule 19    stmt -> IF LPAREN expr RPAREN stmt
Rule 20    stmt -> FOR LPAREN expr_empty SEMICOLON expr_empty SEMICOLON expr_empty RPAREN LBRACKET stmts RBRACKET
Rule 21    stmt -> FOR LPAREN expr_empty SEMICOLON expr_empty SEMICOLON expr_empty RPAREN stmt
Rule 22    expr -> ID LPAREN args RPAREN
Rule 23    expr -> MODULE DOT ID LPAREN args RPAREN
Rule 24    expr -> ID LPAREN RPAREN
Rule 25    expr -> expr DOT ID
Rule 26    args -> expr
Rule 27    args -> args COMMA expr
Rule 28    expr -> expr LBRACE expr RBRACE
Rule 29    expr -> expr COLON expr
Rule 30    expr -> expr LBRACE expr COLON expr RBRACE
Rule 31    expr -> expr QUEST expr COLON expr
Rule 32    expr -> expr INC
Rule 33    expr -> expr DEC
Rule 34    expr -> NOT expr
Rule 35    expr -> MINUS expr
Rule 36    expr -> BITWISE_NOT expr
Rule 37    expr -> expr BITWISE_AND expr
Rule 38    expr -> expr BITWISE_OR expr
Rule 39    expr -> expr BITWISE_XOR expr
Rule 40    expr -> expr OP expr
Rule 41    expr -> expr PLUS expr
Rule 42    expr -> expr MINUS expr
Rule 43    expr -> expr TIMES expr
Rule 44    expr -> expr DIV expr
Rule 45    expr -> expr MOD expr
Rule 46    expr -> expr AND expr
Rule 47    expr -> expr OR expr
Rule 48    expr -> expr LSHIFT expr
Rule 49    expr -> expr RSHIFT expr
Rule 50    expr -> expr RSHIFT_EQUAL expr
Rule 51    expr -> expr LSHIFT_EQUAL expr
Rule 52    expr -> expr LSHIFT_LOGICAL expr
Rule 53    expr -> expr RSHIFT_LOGICAL expr
Rule 54    expr -> expr GREATER expr
Rule 55    expr -> expr LESS expr
Rule 56    expr -> expr LESS_EQUAL expr
Rule 57    expr -> expr GREATER_EQUAL expr
Rule 58    expr -> expr EQUAL expr
Rule 59    expr -> expr NOT_EQUAL expr
Rule 60    expr -> LPAREN expr RPAREN
Rule 61    expr -> NOP
Rule 62    expr -> ID
Rule 63    expr -> NUMBER

Terminals, with rules where they appear

AND                  : 46
AND_EQUAL            : 14
BITWISE_AND          : 37
BITWISE_NOT          : 36
BITWISE_OR           : 38
BITWISE_XOR          : 39
BREAK                : 5
COLON                : 29 30 31
COMMA                : 9 27
COMMENT              : 
DEC                  : 33
DIV                  : 44
DOT                  : 23 25
ELSE                 : 18
EQUAL                : 58
FOR                  : 20 21
GREATER              : 54
GREATER_EQUAL        : 57
ID                   : 7 22 23 24 25 62
IF                   : 17 18 19
INC                  : 32
LBRACE               : 28 30
LBRACKET             : 17 18 18 20
LESS                 : 55
LESS_EQUAL           : 56
LPAREN               : 17 18 19 20 21 22 23 24 60
LSHIFT               : 48
LSHIFT_EQUAL         : 51
LSHIFT_LOGICAL       : 52
MINUS                : 35 42
MINUS_EQUAL          : 11
MOD                  : 45
MODULE               : 23
NEG                  : 
NOP                  : 61
NOT                  : 34
NOT_EQUAL            : 59
NUMBER               : 63
OP                   : 40
OR                   : 47
OR_EQUAL             : 12
PLUS                 : 41
PLUS_EQUAL           : 10
QUEST                : 31
RBRACE               : 28 30
RBRACKET             : 17 18 18 20
RPAREN               : 17 18 19 20 21 22 23 24 60
RSHIFT               : 49
RSHIFT_EQUAL         : 50
RSHIFT_LOGICAL       : 53
SEMICOLON            : 2 4 20 20 21 21
TIMES                : 43
TYPE                 : 7
UPDATE               : 7 8 9
WHILE                : 
XOR                  : 
XOR_EQUAL            : 13
error                : 

Nonterminals, with rules where they appear

args                 : 22 23 27
expr                 : 6 7 8 8 9 9 9 10 10 11 11 12 12 13 13 14 14 15 17 18 19 25 26 27 28 28 29 29 30 30 30 31 31 31 32 33 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60
expr_empty           : 20 20 20 21 21 21
stmt                 : 1 2 3 4 19 21
stmts                : 3 4 17 18 18 20 0

Parsing method: LALR

state 0

    (0) S' -> . stmts
    (1) stmts -> . stmt
    (2) stmts -> . stmt SEMICOLON
    (3) stmts -> . stmts stmt
    (4) stmts -> . stmts stmt SEMICOLON
    (5) stmt -> . BREAK
    (6) stmt -> . expr
    (7) stmt -> . TYPE ID UPDATE expr
    (9) stmt -> . expr COMMA expr UPDATE expr
    (17) stmt -> . IF LPAREN expr RPAREN LBRACKET stmts RBRACKET
    (18) stmt -> . IF LPAREN expr RPAREN LBRACKET stmts RBRACKET ELSE LBRACKET stmts RBRACKET
    (19) stmt -> . IF LPAREN expr RPAREN stmt
    (20) stmt -> . FOR LPAREN expr_empty SEMICOLON expr_empty SEMICOLON expr_empty RPAREN LBRACKET stmts RBRACKET
    (21) stmt -> . FOR LPAREN expr_empty SEMICOLON expr_empty SEMICOLON expr_empty RPAREN stmt
    (8) expr -> . expr UPDATE expr
    (10) expr -> . expr PLUS_EQUAL expr
    (11) expr -> . expr MINUS_EQUAL expr
    (12) expr -> . expr OR_EQUAL expr
    (13) expr -> . expr XOR_EQUAL expr
    (14) expr -> . expr AND_EQUAL expr
    (22) expr -> . ID LPAREN args RPAREN
    (23) expr -> . MODULE DOT ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . expr DOT ID
    (28) expr -> . expr LBRACE expr RBRACE
    (29) expr -> . expr COLON expr
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . expr INC
    (33) expr -> . expr DEC
    (34) expr -> . NOT expr
    (35) expr -> . MINUS expr
    (36) expr -> . BITWISE_NOT expr
    (37) expr -> . expr BITWISE_AND expr
    (38) expr -> . expr BITWISE_OR expr
    (39) expr -> . expr BITWISE_XOR expr
    (40) expr -> . expr OP expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DIV expr
    (45) expr -> . expr MOD expr
    (46) expr -> . expr AND expr
    (47) expr -> . expr OR expr
    (48) expr -> . expr LSHIFT expr
    (49) expr -> . expr RSHIFT expr
    (50) expr -> . expr RSHIFT_EQUAL expr
    (51) expr -> . expr LSHIFT_EQUAL expr
    (52) expr -> . expr LSHIFT_LOGICAL expr
    (53) expr -> . expr RSHIFT_LOGICAL expr
    (54) expr -> . expr GREATER expr
    (55) expr -> . expr LESS expr
    (56) expr -> . expr LESS_EQUAL expr
    (57) expr -> . expr GREATER_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LPAREN expr RPAREN
    (61) expr -> . NOP
    (62) expr -> . ID
    (63) expr -> . NUMBER

    BREAK           shift and go to state 3
    TYPE            shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 9
    ID              shift and go to state 6
    MODULE          shift and go to state 10
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 8
    NOP             shift and go to state 14
    NUMBER          shift and go to state 15

    stmts                          shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 4

state 1

    (0) S' -> stmts .
    (3) stmts -> stmts . stmt
    (4) stmts -> stmts . stmt SEMICOLON
    (5) stmt -> . BREAK
    (6) stmt -> . expr
    (7) stmt -> . TYPE ID UPDATE expr
    (9) stmt -> . expr COMMA expr UPDATE expr
    (17) stmt -> . IF LPAREN expr RPAREN LBRACKET stmts RBRACKET
    (18) stmt -> . IF LPAREN expr RPAREN LBRACKET stmts RBRACKET ELSE LBRACKET stmts RBRACKET
    (19) stmt -> . IF LPAREN expr RPAREN stmt
    (20) stmt -> . FOR LPAREN expr_empty SEMICOLON expr_empty SEMICOLON expr_empty RPAREN LBRACKET stmts RBRACKET
    (21) stmt -> . FOR LPAREN expr_empty SEMICOLON expr_empty SEMICOLON expr_empty RPAREN stmt
    (8) expr -> . expr UPDATE expr
    (10) expr -> . expr PLUS_EQUAL expr
    (11) expr -> . expr MINUS_EQUAL expr
    (12) expr -> . expr OR_EQUAL expr
    (13) expr -> . expr XOR_EQUAL expr
    (14) expr -> . expr AND_EQUAL expr
    (22) expr -> . ID LPAREN args RPAREN
    (23) expr -> . MODULE DOT ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . expr DOT ID
    (28) expr -> . expr LBRACE expr RBRACE
    (29) expr -> . expr COLON expr
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . expr INC
    (33) expr -> . expr DEC
    (34) expr -> . NOT expr
    (35) expr -> . MINUS expr
    (36) expr -> . BITWISE_NOT expr
    (37) expr -> . expr BITWISE_AND expr
    (38) expr -> . expr BITWISE_OR expr
    (39) expr -> . expr BITWISE_XOR expr
    (40) expr -> . expr OP expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DIV expr
    (45) expr -> . expr MOD expr
    (46) expr -> . expr AND expr
    (47) expr -> . expr OR expr
    (48) expr -> . expr LSHIFT expr
    (49) expr -> . expr RSHIFT expr
    (50) expr -> . expr RSHIFT_EQUAL expr
    (51) expr -> . expr LSHIFT_EQUAL expr
    (52) expr -> . expr LSHIFT_LOGICAL expr
    (53) expr -> . expr RSHIFT_LOGICAL expr
    (54) expr -> . expr GREATER expr
    (55) expr -> . expr LESS expr
    (56) expr -> . expr LESS_EQUAL expr
    (57) expr -> . expr GREATER_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LPAREN expr RPAREN
    (61) expr -> . NOP
    (62) expr -> . ID
    (63) expr -> . NUMBER

    BREAK           shift and go to state 3
    TYPE            shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 9
    ID              shift and go to state 6
    MODULE          shift and go to state 10
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 8
    NOP             shift and go to state 14
    NUMBER          shift and go to state 15

    stmt                           shift and go to state 16
    expr                           shift and go to state 4

state 2

    (1) stmts -> stmt .
    (2) stmts -> stmt . SEMICOLON

    BREAK           reduce using rule 1 (stmts -> stmt .)
    TYPE            reduce using rule 1 (stmts -> stmt .)
    IF              reduce using rule 1 (stmts -> stmt .)
    FOR             reduce using rule 1 (stmts -> stmt .)
    ID              reduce using rule 1 (stmts -> stmt .)
    MODULE          reduce using rule 1 (stmts -> stmt .)
    NOT             reduce using rule 1 (stmts -> stmt .)
    MINUS           reduce using rule 1 (stmts -> stmt .)
    BITWISE_NOT     reduce using rule 1 (stmts -> stmt .)
    LPAREN          reduce using rule 1 (stmts -> stmt .)
    NOP             reduce using rule 1 (stmts -> stmt .)
    NUMBER          reduce using rule 1 (stmts -> stmt .)
    $end            reduce using rule 1 (stmts -> stmt .)
    RBRACKET        reduce using rule 1 (stmts -> stmt .)
    SEMICOLON       shift and go to state 17


state 3

    (5) stmt -> BREAK .

    SEMICOLON       reduce using rule 5 (stmt -> BREAK .)
    BREAK           reduce using rule 5 (stmt -> BREAK .)
    TYPE            reduce using rule 5 (stmt -> BREAK .)
    IF              reduce using rule 5 (stmt -> BREAK .)
    FOR             reduce using rule 5 (stmt -> BREAK .)
    ID              reduce using rule 5 (stmt -> BREAK .)
    MODULE          reduce using rule 5 (stmt -> BREAK .)
    NOT             reduce using rule 5 (stmt -> BREAK .)
    MINUS           reduce using rule 5 (stmt -> BREAK .)
    BITWISE_NOT     reduce using rule 5 (stmt -> BREAK .)
    LPAREN          reduce using rule 5 (stmt -> BREAK .)
    NOP             reduce using rule 5 (stmt -> BREAK .)
    NUMBER          reduce using rule 5 (stmt -> BREAK .)
    $end            reduce using rule 5 (stmt -> BREAK .)
    RBRACKET        reduce using rule 5 (stmt -> BREAK .)


state 4

    (6) stmt -> expr .
    (9) stmt -> expr . COMMA expr UPDATE expr
    (8) expr -> expr . UPDATE expr
    (10) expr -> expr . PLUS_EQUAL expr
    (11) expr -> expr . MINUS_EQUAL expr
    (12) expr -> expr . OR_EQUAL expr
    (13) expr -> expr . XOR_EQUAL expr
    (14) expr -> expr . AND_EQUAL expr
    (25) expr -> expr . DOT ID
    (28) expr -> expr . LBRACE expr RBRACE
    (29) expr -> expr . COLON expr
    (30) expr -> expr . LBRACE expr COLON expr RBRACE
    (31) expr -> expr . QUEST expr COLON expr
    (32) expr -> expr . INC
    (33) expr -> expr . DEC
    (37) expr -> expr . BITWISE_AND expr
    (38) expr -> expr . BITWISE_OR expr
    (39) expr -> expr . BITWISE_XOR expr
    (40) expr -> expr . OP expr
    (41) expr -> expr . PLUS expr
    (42) expr -> expr . MINUS expr
    (43) expr -> expr . TIMES expr
    (44) expr -> expr . DIV expr
    (45) expr -> expr . MOD expr
    (46) expr -> expr . AND expr
    (47) expr -> expr . OR expr
    (48) expr -> expr . LSHIFT expr
    (49) expr -> expr . RSHIFT expr
    (50) expr -> expr . RSHIFT_EQUAL expr
    (51) expr -> expr . LSHIFT_EQUAL expr
    (52) expr -> expr . LSHIFT_LOGICAL expr
    (53) expr -> expr . RSHIFT_LOGICAL expr
    (54) expr -> expr . GREATER expr
    (55) expr -> expr . LESS expr
    (56) expr -> expr . LESS_EQUAL expr
    (57) expr -> expr . GREATER_EQUAL expr
    (58) expr -> expr . EQUAL expr
    (59) expr -> expr . NOT_EQUAL expr

  ! shift/reduce conflict for MINUS resolved as shift
    SEMICOLON       reduce using rule 6 (stmt -> expr .)
    BREAK           reduce using rule 6 (stmt -> expr .)
    TYPE            reduce using rule 6 (stmt -> expr .)
    IF              reduce using rule 6 (stmt -> expr .)
    FOR             reduce using rule 6 (stmt -> expr .)
    ID              reduce using rule 6 (stmt -> expr .)
    MODULE          reduce using rule 6 (stmt -> expr .)
    NOT             reduce using rule 6 (stmt -> expr .)
    BITWISE_NOT     reduce using rule 6 (stmt -> expr .)
    LPAREN          reduce using rule 6 (stmt -> expr .)
    NOP             reduce using rule 6 (stmt -> expr .)
    NUMBER          reduce using rule 6 (stmt -> expr .)
    $end            reduce using rule 6 (stmt -> expr .)
    RBRACKET        reduce using rule 6 (stmt -> expr .)
    COMMA           shift and go to state 18
    UPDATE          shift and go to state 19
    PLUS_EQUAL      shift and go to state 20
    MINUS_EQUAL     shift and go to state 21
    OR_EQUAL        shift and go to state 22
    XOR_EQUAL       shift and go to state 23
    AND_EQUAL       shift and go to state 24
    DOT             shift and go to state 25
    LBRACE          shift and go to state 26
    COLON           shift and go to state 27
    QUEST           shift and go to state 28
    INC             shift and go to state 29
    DEC             shift and go to state 30
    BITWISE_AND     shift and go to state 31
    BITWISE_OR      shift and go to state 32
    BITWISE_XOR     shift and go to state 33
    OP              shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIV             shift and go to state 38
    MOD             shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    LSHIFT          shift and go to state 42
    RSHIFT          shift and go to state 43
    RSHIFT_EQUAL    shift and go to state 44
    LSHIFT_EQUAL    shift and go to state 45
    LSHIFT_LOGICAL  shift and go to state 46
    RSHIFT_LOGICAL  shift and go to state 47
    GREATER         shift and go to state 48
    LESS            shift and go to state 49
    LESS_EQUAL      shift and go to state 50
    GREATER_EQUAL   shift and go to state 51
    EQUAL           shift and go to state 52
    NOT_EQUAL       shift and go to state 53

  ! MINUS           [ reduce using rule 6 (stmt -> expr .) ]


state 5

    (7) stmt -> TYPE . ID UPDATE expr

    ID              shift and go to state 54


state 6

    (22) expr -> ID . LPAREN args RPAREN
    (24) expr -> ID . LPAREN RPAREN
    (62) expr -> ID .
